--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ebac Talks</title>
+    <title>Aniversario</title>
     <!-- Google fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -15,27 +15,22 @@
 <body>
     <header class="hero">
         <div class="container">
-            <img class="hero__logo" src="./src/images/ebac_logo.svg" alt="EBAC">
             <p class="hero__text">
-                O maior evento de tecnologia do Brasil começa em <span id="contador"></span>
+                O maior aniversario do Brasil começa em <span id="contador"></span>
             </p>
             <div class="infos-bar">
                 <ul class="infos-bar__infos">
                     <li class="infos-bar__infos__item">
                         <b>Localização</b>
-                        Allianz Parque - Barra Funda - São Paulo
-                    </li>
-                    <li class="infos-bar__infos__item">
-                        <b>Preço</b>
-                        A partir de R$ 120,00
+                        Ginazio De Esportes - Rio Claro - São Paulo
                     </li>
                     <li class="infos-bar__infos__item">
                         <b>Quando</b>
-                        12/12/2023 às 19hs
+                        17/04/2024 às 19hs
                     </li>
                 </ul>
                 <a href="#" class="button button--primary">
-                    Garanta sua vaga
+                    Confirme sua presença
                 </a>
             </div>
         </div>
@@ -44,48 +39,48 @@
     <section class="event event--frontend">
         <div class="container" data-aos="fade-right" data-aos-duration="1000" data-aos-easing="ease-in-sine">
             <div class="event__details">
-                <h2 class="event__details__title">Front-end</h2>
+                <h2 class="event__details__title">Banda</h2>
                 <p class="event__details__description">
-                    O EBAC Talks é um evento de tecnologia e para o front-end, tem como objetivo trazer conhecimento e novidades sobre o setor. Durante o evento, os participantes terão a oportunidade de aprender com especialistas da área, trocar experiências e se atualizar sobre as últimas tendências e tecnologias. Além disso, o EBAC Talks oferecerá promoções exclusivas de cursos para aqueles que desejam aprimorar suas habilidades em front-end. Não perca a chance de participar deste evento incrível e impulsionar sua carreira na área de tecnologia!
+                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Rem doloribus dolorem tenetur hic architecto. Nesciunt adipisci qui odit alias doloremque totam porro rem atque, incidunt numquam aspernatur vero officiis voluptatum! Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur excepturi impedit alias natus eius. Recusandae, voluptates tenetur, repellendus dignissimos facilis vel iste commodi beatae nesciunt inventore sed architecto eos optio.
                 </p>
             </div>
-            <img class="event__image" src="./src/images/frontend.png" alt="front-end">
+            <img class="event__image" src="./src/images/banda.jpg" alt="front-end">
         </div>
     </section>
 
     <section class="event event--ux-ui event--image-left">
         <div class="container" data-aos="fade-left" data-aos-duration="1000" data-aos-easing="ease-in-sine">
             <div class="event__details">
-                <h2 class="event__details__title">UX / UI</h2>
+                <h2 class="event__details__title">Comidas</h2>
                 <p class="event__details__description">
-                    O EBAC Talks é um evento de tecnologia com foco em design UX/UI, que tem como objetivo trazer conhecimento e novidades sobre o setor. Durante o evento, os participantes terão a oportunidade de aprender com especialistas da área, trocar experiências e se atualizar sobre as últimas tendências e tecnologias. Além do design UX/UI, o evento também abordará outras áreas relacionadas, oferecendo uma visão ampla e abrangente do setor. O EBAC Talks oferecerá promoções exclusivas de cursos para aqueles que desejam aprimorar suas habilidades em design UX/UI. Não perca a chance de participar deste evento incrível e impulsionar sua carreira na área de tecnologia!
+                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Rem doloribus dolorem tenetur hic architecto. Nesciunt adipisci qui odit alias doloremque totam porro rem atque, incidunt numquam aspernatur vero officiis voluptatum! Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur excepturi impedit alias natus eius. Recusandae, voluptates tenetur, repellendus dignissimos facilis vel iste commodi beatae nesciunt inventore sed architecto eos optio.
                 </p>
             </div>
-            <img class="event__image" src="./src/images/ui-ux.png" alt="ui-ux">
+            <img class="event__image" src="./src/images/comidas.jpg" alt="ui-ux">
         </div>
     </section>
 
     <section class="event event--data-science">
         <div class="container" data-aos="fade-right" data-aos-duration="1000" data-aos-easing="ease-in-sine">
             <div class="event__details">
-                <h2 class="event__details__title">Data Science</h2>
+                <h2 class="event__details__title">Bartender</h2>
                 <p class="event__details__description">
-                    O EBAC Talks é um evento de tecnologia com foco em Data Science, que tem como objetivo trazer conhecimento e novidades sobre o setor. Durante o evento, os participantes terão a oportunidade de aprender com especialistas da área, trocar experiências e se atualizar sobre as últimas tendências e tecnologias. O evento abordará temas como análise de dados, aprendizado de máquina e inteligência artificial, oferecendo uma visão ampla e abrangente do setor. O EBAC Talks oferecerá promoções exclusivas de cursos para aqueles que desejam aprimorar suas habilidades em Data Science. Não perca a chance de participar deste evento incrível e impulsionar sua carreira na área de tecnologia!
+                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Rem doloribus dolorem tenetur hic architecto. Nesciunt adipisci qui odit alias doloremque totam porro rem atque, incidunt numquam aspernatur vero officiis voluptatum! Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur excepturi impedit alias natus eius. Recusandae, voluptates tenetur, repellendus dignissimos facilis vel iste commodi beatae nesciunt inventore sed architecto eos optio.
                 </p>
             </div>
-            <img class="event__image" src="./src/images/data.png" alt="data-science">
+            <img class="event__image" src="./src/images/bebidas.jpeg" alt="data-science">
         </div>
     </section>
 
     <section class="event event--backend event--image-left">
         <div class="container" data-aos="fade-left" data-aos-duration="1000" data-aos-easing="ease-in-sine">
             <div class="event__details">
-                <h2 class="event__details__title">Back-end</h2>
+                <h2 class="event__details__title">Area de Jogos</h2>
                 <p class="event__details__description">
-                    O EBAC Talks é um evento de tecnologia com foco em back-end, que tem como objetivo trazer conhecimento e novidades sobre o setor. Durante o evento, os participantes terão a oportunidade de aprender com especialistas da área, trocar experiências e se atualizar sobre as últimas tendências e tecnologias. O evento abordará temas como desenvolvimento de APIs, bancos de dados e arquitetura de sistemas, oferecendo uma visão ampla e abrangente do setor. O EBAC Talks oferecerá promoções exclusivas de cursos para aqueles que desejam aprimorar suas habilidades em back-end. Não perca a chance de participar deste evento incrível e impulsionar sua carreira na área de tecnologia!
+                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Rem doloribus dolorem tenetur hic architecto. Nesciunt adipisci qui odit alias doloremque totam porro rem atque, incidunt numquam aspernatur vero officiis voluptatum! Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur excepturi impedit alias natus eius. Recusandae, voluptates tenetur, repellendus dignissimos facilis vel iste commodi beatae nesciunt inventore sed architecto eos optio.
                 </p>
             </div>
-            <img class="event__image" src="./src/images/backend.png" alt="back-end">
+            <img class="event__image" src="./src/images/jogos.jpg" alt="back-end">
         </div>
     </section>
 
